<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.startandroid.freeadvertising.Activity.RegisterActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/first_name"
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/last_name"
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/telefon_number"
            android:id="@+id/telefon_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="Login"
            android:id="@+id/edtloginreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="Parol"
            android:id="@+id/edtparolreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/register"
            android:id="@+id/registerbtnreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
