<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_new_reklam"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.startandroid.freeadvertising.Activity.AddNewReklam">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/reklam_type"
                    android:text="@string/choose_type"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="normal|bold" />
                <LinearLayout
                    android:id="@+id/lvMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:text="@string/choose_another"
                    android:id="@+id/other_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:hint="@string/name_reklama"
                    android:id="@+id/name_reklam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:hint="@string/description_reklama"
                    android:id="@+id/comment_reklam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />
                <EditText
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:hint="@string/score_reklama"
                    android:id="@+id/reklam_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/image_linlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:visibility="gone"
                    android:id="@+id/btn_save_Reklam"
                    android:layout_width="match_parent"
                    android:layout_margin="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/save_button_bg"
                    android:layout_gravity="bottom|center"
                    android:text="@string/save_reklama"
                    android:textColor="@color/colorWhite"
                    />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnPhotoReklam"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_camera"/>
</RelativeLayout>
